# CSAAT2

./: .coverage  Procfile  README.md  coverage.xml  db.sqlite3  manage.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml
MainProject/: Procfile  asgi.py  requirements.txt  settings.py  urls.py  wsgi.py
MainProject/MainProject/: settings.py
MainProject/SubProject1/: apps.py
SubProject1/: apps.py  views.py
SubProject2/: apps.py  views.py
htmlcov/: SubProject1___init___py.html  SubProject1_admin_py.html  SubProject1_apps_py.html  SubProject1_migrations___init___py.html  SubProject1_models_py.html  SubProject1_tests_py.html  SubProject1_views_py.html  index.html  status.json
staticfiles/: staticfiles.json
