[tool.poetry]
name = "csaat2"
version = "0.1.0"
description = ""
authors = ["thisura97 <tdinith481@gmail.com>"]
packages = [
    {include = "SubProject1"},
     {include = "SubProject2"},
]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.5"
whitenoise = "^5.2.0"
gunicorn = "^20.0.4"
black = "^20.8b1"
isort = "^5.7.0"
flakehell = "^0.7.1"
mypy = "^0.790"
pre-commit = "^2.9.3"
tox = "^3.21.0"
coverage = "^5.3.1"
mysqlclient = "^2.0.3"


[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
pytest-django = "^4.1.0"
pytest-xdist = "^2.2.0"

[tool.flakehell]
exclude = ["README.rst", "README.md",".tox","tests"]
format = "colored"
show_source = true
whitelist = "../../allowlist.txt"
baseline = "baseline.txt"

[tool.coverage]
exclude=[".tox"]

[tool.flakehell.plugins]
flake8-bandit = ["+*", "-S322"]
flake8-bugbear = ["+*"]
flake8-builtins = ["+*"]
flake8-comprehensions = ["+*"]
flake8-darglint = ["+*"]
flake8-docstrings = ["+*"]
flake8-eradicate = ["+*"]
flake8-isort = ["+*"]
flake8-mutable = ["+*"]
flake8-pytest-style = ["+*"]
flake8-spellcheck = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*"]
pyflakes = ["+*"]
pylint = ["+*"]

[tool.black]
line-length = 80
skip-string-normalization = true

[tool.isort]
known_first_party = "packagename"
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 80
lines_between_types = 1
multi_line_output = 3
use_parentheses = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
